[workspace]
members = [
  "client",
  "client-std",
  "server",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokio = "1.34.0"
tracing = { version = "0.1.40" }
wit-component = "0.18.1"
wasmtime = "14.0.4"
wasmtime-wasi = "14.0.4"
futures = "0.3.29"
reqwest = "0.11.22"
wit-bindgen = "0.14.0"
