[workspace]
members = [
  "client",
  "client-std",
  "client-tokio",
  "client-tokio-postgres",    
]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokio = "1.34.0"
futures = "0.3.29"
wit-bindgen = "0.16.0"

[patch.crates-io]
tokio = { git = "https://github.com/dicej/tokio", branch = "wasi-sockets" }
tokio-postgres = { git = "https://github.com/dicej/rust-postgres", branch = "wasi-sockets" }
