[package]
name = "sockets-server"
version = "2.0.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokio = { version = "1.34.0", features = ["io-util", "net", "rt"] }
tracing = { version = "0.1.40", features = ["log"] }
futures = "0.3.29"
postgres-protocol = "0.6.6"
pgwire = "0.16.1"
async-trait = "0.1.74"
tempfile = "3.8.1"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["fs", "process", "macros", "rt-multi-thread"] }
wit-component = "0.19.0"
wasmtime =  { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-16.0.0", features = [ "component-model" ] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-16.0.0" }
reqwest = "0.11.22"
pretty_env_logger = "0.5.0"
componentize-py = { git = "https://github.com/bytecodealliance/componentize-py", branch = "update-all-the-things" }

[workspace]
